--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             <h2>Nos Produits</h2>
             <!-- À compléter par les étudiants -->
         </section>
+        <section id="services">
+         <h2>Nos Services</h2>
+         <p>Livraison rapide • SAV réactif • Garantie 2 ans</p>
+        </section>
+
+       <img src="logo.png" alt="Logo TechStore" />
     </main>
 
     <footer>
