content: ajout de 2 nouveaux produits

--- a/index.html
+++ b/index.html
@@ -23,8 +23,19 @@
         </section>
 
         <section id="produits">
-            <h2>Nos Produits</h2>
-            <!-- À compléter par les étudiants -->
+                    <h2>Découvrez nos dernières nouveautés !</h2>
+                    <p>La technologie à portée de main</p>
+                    <div class="produit">
+                        <h3>iPhone 15</h3>
+                        <p>Le dernier smartphone d'Apple</p>
+                        <span class="prix">999€</span>
+                    </div>
+
+                    <div class="produit">
+                        <h3>Samsung Galaxy S23</h3>
+                        <p>Le dernier smartphone de Samsung</p>
+                        <span class="prix">799€</span>
+                    </div>
         </section>
         <section id="services">
          <h2>Nos Services</h2>
@@ -36,6 +47,7 @@
 
     <footer>
         <p>&copy; 2025 TechStore - Tous droits réservés</p>
+        <p>Fait par William, Kenneth, Samuel</p>
     </footer>
 
     <script src="script.js"></script>
